--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Dhiraj Shah</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-
+	<h1>Hello, Code School!</h1>
+	<ul>
+		<li>Javascript</li>
+		<li>Ruby and Rails</li>
+		<li>Object Oriented Programming</li>
+		<li>AngularJS</li>
+		<li>ReactJS</li>
+	</ul>
   </body>
 </html>
